fix menu collapse, login

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,7 @@ body {
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   /*background-color: #26418f;*/
 }
+
+a {
+  cursor: pointer;
+}
